--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/makhani_daal.html">Makhani Daal</a></li>
+        </ul>
     </body>
 </html>
