--- a/recipes/makhani_daal.html
+++ b/recipes/makhani_daal.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-08">
     </head>
     <body>
+        <a href="../index.html">Home</a>
         <h1>Makhani Daal</h1>
     </body>
 </html>
