--- a/recipes/makhani_daal.html
+++ b/recipes/makhani_daal.html
@@ -7,5 +7,6 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Makhani Daal</h1>
+        <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of mouth watering makhani daal">
     </body>
 </html>
