Add description,ingredients,steps to makhani_daal.html

--- a/recipes/makhani_daal.html
+++ b/recipes/makhani_daal.html
@@ -8,5 +8,37 @@
         <a href="../index.html">Home</a>
         <h1>Makhani Daal</h1>
         <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of mouth watering makhani daal">
+        <h2>Description</h2>
+        <p>This is a typical daal that Punjabis make for their parties! My kids love it! I enjoy it as a soup or with with fresh rotis!
+            You can also serve it with rice. Garnish with fresh cilantro leaves.</p>
+        <h2>Ingredients</h2>
+        <ol>
+            <li>1 cup black lentils (kaali daal)</li>
+            <li>¼ cup split chickpeas (channa daal)</li>
+            <li>¼ cup red kidney beans (rajma)</li>    
+            <li>2 teaspoons vegetable oil</li>    
+            <li>1 onion, finely chopped</li>               
+            <li>1 (2 inch) piece ginger, minced</li>               
+            <li>2 cloves garlic, minced</li>              
+            <li>1 teaspoon cumin seeds</li>               
+            <li>2 tomatoes, finely chopped</li>               
+            <li>2 teaspoons ground coriander</li>               
+            <li>1 teaspoon garam masala</li>              
+            <li>½ teaspoon red chile powder</li>            
+            <li>½ teaspoon ground turmeric</li>               
+            <li>salt to taste</li>            
+            <li>2 teaspoons butter</li>    
+            <li>2 teaspoons yogurt</li>    
+            <li>3 sprigs cilantro leaves</li>
+        </ol>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Place black lentils, chickpeas, and red kidney beans in a large container and cover with several inches of cool water; let soak, 6 hours to overnight.</li>
+            <li>Pour lentil mixture and soaking liquid into a pressure cooker. Bring to high pressure according to manufacturer's instructions and cook until soft, about 20 minutes. Remove from heat and release pressure through natural release method according to manufacturer's instructions.</li>
+            <li>Heat oil in a large skillet over medium heat. Add onion, ginger, garlic, and cumin seeds; cook and stir until golden brown, about 3 minutes. Add tomatoes; cook and stir until softened, about 2 minutes. Stir in ground coriander, garam masala, red chile powder, turmeric, and salt.</li>
+            <li>Fold onion mixture into cooked lentil mixture. Add butter, yogurt, and cilantro leaves; stir to incorporate.</li>
+        </ol>
+        
+        
     </body>
 </html>
