Add chole.html with content in recipes plus add links to pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/makhani_daal.html">Makhani Daal</a></li>
+            <li><a href="recipes/chole.html">Chole</a></li>
         </ul>
     </body>
 </html>
