--- a/recipes/makhani_daal.html
+++ b/recipes/makhani_daal.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Odin Recipes</title>
+        <title>Makhani Daal</title>
         <meta charset="UTF-08">
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Makhani Daal</h1>
         <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of mouth watering makhani daal">
-        <h2>Description</h2>
+        <h2>Description:</h2>
         <p>This is a typical daal that Punjabis make for their parties! My kids love it! I enjoy it as a soup or with with fresh rotis!
             You can also serve it with rice. Garnish with fresh cilantro leaves.</p>
-        <h2>Ingredients</h2>
+        <h2>Ingredients:</h2>
         <ol>
             <li>1 cup black lentils (kaali daal)</li>
             <li>¼ cup split chickpeas (channa daal)</li>
