--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/makhani_daal.html">Makhani Daal</a></li>
             <li><a href="recipes/chole.html">Chole</a></li>
+            <li><a href="recipes/paneer.html">Paneer</a></li>
         </ul>
     </body>
 </html>
