Add images to recipes

--- a/recipes/makhani_daal.html
+++ b/recipes/makhani_daal.html
@@ -7,7 +7,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Makhani Daal</h1>
-        <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of mouth watering makhani daal">
+        <img src="../images/makhanidaal.jpg" alt="A plate of mouth watering makhani daal">
         <h2>Description:</h2>
         <p>This is a typical daal that Punjabis make for their parties! My kids love it! I enjoy it as a soup or with with fresh rotis!
             You can also serve it with rice. Garnish with fresh cilantro leaves.</p>
