--- a/recipes/paneer.html
+++ b/recipes/paneer.html
@@ -7,7 +7,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Paneer</h1>
-        <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of paneer">
+        <img src="../images/paneer.jpeg" alt="A plate of paneer">
         <h2>Description:</h2>
         <p>It's easy to make your very own paneer to use in your favorite Indian recipes. For homemade paneer, all you need is milk, lemon juice, salt, and a thermometer!</p>
         <h2>Ingredients:</h2>
