--- a/recipes/chole.html
+++ b/recipes/chole.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <a href="../index.html">Home</a>
-        <h1>Makhani Daal</h1>
-        <img src="https://pixahive.com/photo/indian-dal-makhni/" alt="A plate of mouth watering chole">
+        <h1>Chole</h1>
+        <img src="../images/chole.jpg" alt="A plate of mouth watering chole">
         <h2>Description:</h2>
         <p>This chickpea dish, also referred to as chana masala, gets its deep, robust flavor from simmering together aromatic spices like anise pods, cloves, and garam masala. 
             Serve with naan and basmati rice.</p>
